[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/Player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 0.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.56835
scale = Vector2( 0.783451, 0.783451 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="reload_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="shoot_point" type="Position2D" parent="."]
position = Vector2( 27, 0 )

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[connection signal="timeout" from="network_tick_rate" to="." method="_on_network_tick_rate_timeout"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
